# agent-runner

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  prompt-runner.toml  pyproject.toml
tools/backlog-runner/: README.md  pyproject.toml
tools/backlog-runner/src/backlog_runner/: __init__.py  __main__.py  archive.py  claims.py  cli.py  git_ops.py  merge_gate.py  models.py  paths.py  scanner.py  status.py  supervisor.py  worker.py
tools/backlog-runner/tests/: test_integrated_simulator.py  test_merge_gate.py  test_scanner_claims.py  test_worker.py
tools/backlog-runner/tests/fixtures/: methodology_runner_simulator.py
tools/methodology-runner/: README.md  pyproject.toml
tools/methodology-runner/docs/: M-002-phase-definitions.yaml  M-003-agent-role-specifications.md  M-004-traceability-infrastructure.md  M-005-simulation-framework.md  skills-baselines.yaml
tools/methodology-runner/docs/prompts/: PR-002-methodology-runner-skills-and-agents.md  PR-003-audit-variant-test.md  PR-004-model-effort-audit-test.md  PR-007-haiku-extract-opus-judge.md  PR-008-model-effort-audit-test-flat.md  PR-018-methodology-step-lab-planning.md  PR-020-methodology-optimization-supervisor.md  PR-021-hello-world-requirements-inventory-and-checklist.md  PR-023-ph001-feature-specification.md  PR-024-ph002-architecture.md  PR-025-ph000-requirements-inventory.md  PR-026-ph003-solution-design.md  PR-027-ph004-interface-contracts.md  PR-028-ph005-intelligent-simulations.md  PR-029-ph006-incremental-implementation.md  PR-030-ph007-verification-sweep.md  README.md  integration-agent-PH-002-architecture.md  integration-agent-PH-005-intelligent-simulations.md  integration-agent-PH-006-incremental-implementation.md
tools/methodology-runner/scripts/: run-full-methodology-pipeline.sh  run-phase-0-requirements-inventory.sh  run-phase-1-feature-specification.sh  run-phase-2-architecture.sh  run-phase-3-solution-design.sh  run-phase-4-interface-contracts.sh  run-phase-5-intelligent-simulations.sh  run-phase-6-incremental-implementation.sh  run-phase-7-verification-sweep.sh  run-step-0.sh  run_methodology_baseline.py  run_methodology_optimization_supervisor.py  run_methodology_step_harness.py
tools/methodology-runner/scripts/retired/: README.md  run-supervisor.sh
tools/methodology-runner/skills/: AUTHORING-CONTEXT.md  README.md  authoring-prelude.txt
tools/methodology-runner/skills/structured-design/: SKILL.md
tools/methodology-runner/skills/structured-review/: SKILL.md
tools/methodology-runner/src/methodology_runner/: __init__.py  cli.py  cross_reference.py  models.py  orchestrator.py  phase_0_validation.py  phase_1_validation.py  phase_2_validation.py  phase_3_validation.py  phase_4_validation.py  phase_5_validation.py  phase_6_validation.py  phase_7_validation.py  phases.py
tools/methodology-runner/tests/methodology_runner/: test_cli.py  test_cross_reference.py  test_orchestrator_prompt_modules.py  test_phase_0_validation.py  test_phase_2_validation.py  test_phase_3_validation.py  test_phase_4_validation.py  test_phase_5_validation.py  test_phase_6_validation.py  test_phase_7_validation.py  test_phases_renumbered.py  test_prompt_resources.py  test_target_merge_skip.py
tools/methodology-runner/tests/scripts/: test_run_methodology_baseline.py
tools/prompt-runner/: README.md  pyproject.toml
tools/prompt-runner/docs/testing/: AC-001-prompt-runner.md
tools/prompt-runner/src/prompt_runner/: __init__.py  (+10 more)
(+363 files in other folders)
