[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "methodology-runner"
version = "0.1.0"
description = "Run the multi-phase methodology workflow on a project workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "prompt-runner>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
methodology-runner = "methodology_runner.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["methodology_runner*"]

[tool.setuptools.package-data]
methodology_runner = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
