[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-runner"
version = "0.1.0"
description = "Run markdown prompt and judge workflows with revision loops."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
prompt-runner = "prompt_runner.__main__:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["prompt_runner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
